# change-logger

./: CHANGELOG.md  CHANGELOG.md.backup  README.md  changelog_working.md  exam.md  my_changelog.md  pyproject.toml  released_changelog.md  template_debug_results.json
.github/workflows/: release.yml
mycmd/: render_changelog.py
scripts/: release_changelog.sh
src/change_logger/: __init__.py  main.py  model_templator.py  models.py  template_debugger.py
templates/: changelog.md.j2  changelog_working.md.j2  my_changelog.md.j2  released_changelog.md.j2
tests/: test_any.py
